--- a/thesis.tex
+++ b/thesis.tex
@@ -620,148 +620,119 @@ takes on a significant burden in terms of development. Most develop their own fa
 replication, recovering, allocation, and serialization protocols. In nearly every case the
 performance of these systems is determined by the techniques used to serialize writes on the index
 of the data structure.
-%%
+
+In this dissertation we take two approaches to enable sharing and reduce or remove contention. In
+the first approach we use a programmable switch as a centralized contention resolver
+(Chapter~\ref{chap:swordbox}), in the second we design a new key-value store which takes advantage
+of data structure design (Chapter~\ref{chap:rcuckoo}). These approaches take advantage of distinct
+data structure properties. In the following subsections we will describe differences between the
+properties in terms of ~\todo{come back and point to sections.}.
+
+
+\subsection{Sparse vs Dense Data Structures}
+
+Data structures in disaggregated systems can be broadly categorized as either sparse or dense.
+Sparse data structures are pointer based, such as linked lists and trees. Dense data structures
+reside in a linear block of memory, such as an array or heap. These two categories form a spectrum
+as some structures like hash tables may have a dense index and a sparse data region formed by linked
+lists. The choice of data structure has a profound impact on the number of memory accesses required
+to perform operations. Sparse data structure typically require pointer chasing which requires
+traversing some number of pointers to reach the data, for example searching through a linked list or
+down a binary tree. Dense data structure are typically easy to index into, but tend to require more
+data movement, such as inserted into a sorted array. Moreover when designed for concurrency sparse
+data structures are typically more amenable to optimistic approaches, where operations can be done
+out of place and committed via an atomic operation, while dense data structures typically use locks
+to implement a critical section while data is updated.
+
+In the context of disaggregated memory the choice of data structure is critical as each pointer
+resolution or data move requires an RDMA round trip. Lock based data structures can bottle neck
+quickly if locks are too coarse grained, and client failure while holding a lock can lead to
+distributed deadlock. Optimistic approaches can lead to high amounts of wasted work if operations
+fail, although their failures cases may be easier to reason about as the effects of the operation
+are not visible until the operation is committed.
+
+Disaggregated data structures are not the first to face these challenges. NUMA data structures, RDMA
+key-value stores, and preliminary work on disaggregated data structures each have their own
+combination of techniques for managing this tradeoff space.
+
+
+\begin{table}[h]
+	%\begin{table}[h]
+		\centering
+		\caption{Cross section of systems and techniques. Full circles~{\fullcirc} imply that a system uses the category, ~{\halfcirc}  denotes when a
+		system meets the qualification in spirit but not explicitly, and ~{\nullcirc}  
+		when the technique is absent. Columns OC and CC stand for Optimistic Concurrency and Compute Coalescing respectively.}
+		\begin{tabular}{ c | c | c | c | c | c | c | c | c }
+			& project & \shortstack{read \\ inflation} & \shortstack{relaxed  \\ layout} & \shortstack{pre-\\compute} & \shortstack{OC*} & \shortstack{metadata \\ caching} & \shortstack{CC*} & \shortstack{self \\ verifing}  \\ \hline
+																	%N          %R          %P          %O          %M          %C          %W          %S
+	\multirow{3}{*}{\rotatebox[origin=c]{90}{\shortstack{Multicore \\ NUMA}}} & \shortstack{Flat \\ Combining}~\cite{flat-combining}   & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \fullcirc & \nullcirc \\ \cdashline{2-9}
+			 & \shortstack{Hopscotch \\ Hash}~\cite{hopscotch}         & \fullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc \\ \cdashline{2-9}
+	%\multirow{1}{*}{\rotatebox[origin=c]{0}{\shortstack{NUMA}}} & \shortstack{Blackbox \\ NUMA}~\cite{black-box-numa}     &  &  &  &  &  &  &  &  \\ \hline \hline %\cline{2-10} \cline{2-10}
+			& \shortstack{Blackbox \\ NUMA}~\cite{bbn}     & \halfcirc & \nullcirc & \nullcirc & \fullcirc & \fullcirc & \fullcirc & \nullcirc \\ \hline %\cline{2-10} \cline{2-10}
+	\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{RDMA \\ Key-Value}}} & pilaf~\cite{pilaf}                                      & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \fullcirc \\ \cdashline{2-9}
+			 & farm~\cite{farm}                                        & \fullcirc & \nullcirc & \nullcirc & \fullcirc & \fullcirc & \fullcirc  & \nullcirc \\ \cdashline{2-9}
+			 & herd~\cite{herd}                                        & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc  & \nullcirc \\ \cdashline{2-9}
+			 & cell~\cite{cell}                                        & \nullcirc & \nullcirc & \nullcirc & \halfcirc & \fullcirc & \nullcirc  & \fullcirc \\ \hline \hline
+			 % & % fasst~\cite{faast}                                      & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc %& \nullcirc & \nullcirc \\ \hdashline
+			 % & % erpc~\cite{erpc}                                        & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc \\ \hdashline
+			 %& storm~\cite{storm}                                      &  &  &  &  &  &  &  \\ \cdashline{2-9}
+			 % & 1RMA~\cite{1rma}                                        &  &  &  &  &  &  &  \\ \hline \hline
+	%\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{\small Disaggregated \\ \small Datastructures }}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
+	\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{\small Disaggregated \\ \small Datastructures }}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
+	%\multirow{5}{*}{\rotatebox[origin=c]{90}{\shortstack{Far-Memory \\ Structures}}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
+			 & \shortstack{RACE}~\cite{race}            & \fullcirc  & \fullcirc & \halfcirc & \fullcirc & \fullcirc & \nullcirc & \fullcirc \\ \cdashline{2-9}
+			 & \shortstack{Sherman \\ ~\cite{sherman}}                            & \fullcirc & \fullcirc & \halfcirc & \fullcirc & \fullcirc & \fullcirc & \fullcirc \\ \cdashline{2-9}
+			 %& Ford~\todo{}                                          &  &  &  &  &  & \\ \cdashline{2-9}
+			 & Mind~\cite{mind}                                              & \nullcirc & \halfcirc & \halfcirc & \nullcirc & \fullcirc & \nullcirc & \nullcirc \\ \hline
+		\end{tabular}
+	
+		
+		\label{tab:re-table}
+	\end{table} 
+
+Table~\ref{tab:re-table} is the result of a literature review on the state of the art for shared
+data structures. We noted a variety of techniques that cross cut the systems we reviewed. Read
+inflation is a technique which takes advantage of data structure locality. Simply put if a rough
+location of data is known a big read can be issued to fetch a region containing the data. This
+reduces search time for data in terms of memory access (or round trips) and trades off bandwidth for
+latency. Hopscotch hashing~\cite{hopscotch} detailed more in the next section, defines a range $h$
+in which data can be placed in its hash index. This technique goes hand in hand with relaxed data
+structure layout (e.g. associativity) which allows for data to be placed in any order on pre-defined
+bounds. RACE~\cite{race} a recent disaggregated key value store uses 8 way associative storage in
+its index and uses read inflation to grab each bucket in a single read. Sherman~\cite{sherman} A
+write optimized B+Tree uses associate, rather than sorted leaves to reduce contention on writes.
+
+Due to the high cost of reading far memory a common trait among these systems is to push complexity
+to the client. We classify this into three categories: pre-compute, metadata caching, and
+self-verifying. Pre-compute is the idea that additional work on the client can reduce the number of
+reads required in remote memory. As noted in the introduction Clio~\cite{clio} uses a flat
+precomputed page-table, RACE uses a local power-of-two choices decision to reduce contention, and
+sherman uses a local lock table to reduce remote contention. Each disaggregated system made use of
+some degree of metadata caching, where a component of the data structures index is cached locally on
+the client to reduce the number of read required to synchronize with the remote state. In nearly all
+cases data structures are self-verifying, meaning that the data structures integrity can be
+determined by a local calculation on the client. These are commonly CRC64's.
+
 The techniques used by these systems are largely the same as those used to design RDMA key-value
 stores for non-disaggregated memory over the past decade~\cite{pilaf,cell,herd,farm}. The primary
 difference is that disaggregated systems use exclusively one-sided RDMA operations, while RDMA
 key-value stores typically route write operations through a CPU to serialize requests.
+
+Despite the similarities between the two classes of systems, there is no agreement on if data
+structures should be optimistic or lock based. 
 %%
-A few systems have proposed to or realized the potential of using a programmable switch, or NIC in a
-disaggregated rack to aid in serialization. Notably MIND~\cite{mind} implements memory management on
-a switch, while Clio~\cite{clio} and SuperNIC~\cite{supernic} use an FPGA based smartNIC to
-implement any number of memory side network functions.
-
-\subsection{Swordbox Disaggregated memory}
-
-While 1-sided RDMA allows system designers to place memory on passive
-remote servers, the question of how best to access remote memory
-remains open; existing systems fall into one of two categories.
-Transparent systems present far memory to the application as if it
-were local, using traditional memory virtualization techniques to
-cache pages locally and swap in and out on
-demand~\cite{ivy,infiniswap, leap, fastswap,legoos}.
-%In either case transparency incurs a
-%performance cost as remote accesses cannot be optimized for by the
-%running application.
+In Chapter~\ref{chap:rcuckoo} we design a lock based hash table which merges the quality of Cuckoo
+and Hopscotch hashing to improve locality, and enable efficient precomputation. In the following
+Section~\ref{sec:lock-vs-op} we describe how different disaggregated systems have used locks and
+optimistic concurrency, and in Section~\ref{sec:hashtables} we describe the properties of Cuckoo and
+Hopscotch hashing.
 %%
-Other systems require applications to access remote memory explicitly
-through RPC-like APIs~\cite{aifm,reigons,clover,sherman,fasst,fusee} which
-allow the runtimes to apply a variety of optimizations including
-batching and scheduling.
-%%
-Regardless of the method of access, sharing remote memory between
-clients is fundamentally expensive, and at the time of writing no
-RDMA-based transparent system exposes shared memory.  Rather, the few
-systems that attempt to support sharing do so in the context of
-specific datastructures which allows the runtimes to manage concurrent
-accesses.  We apply \sword\ to two distinct
-contention management schemes---locks and optimistic concurrency
-control---and provide brief overviews below.
-
-\emph{Locks.}  Sherman is a write-optimized B+Tree for passive remote
-memory implemented using per-node locks~\cite{sherman}. The tree is
-augmented using entirely 1-sided RDMA operations. Sherman improves
-performance under contention in two ways. First, it places locks for
-each node in the B+Tree in a special region of NIC memory exposed by
-ConnectX-5 NICs.  This small chunk of memory exposes the same RDMA
-interface as host memory, but allows locking operations to execute
-with approximately 3$\times$ the throughput.  Second, Sherman's
-clients employ a hierarchical locking scheme to reduce the contention
-for server-hosted locks.  This client-local optimization significantly
-improves performance in cases where clients are collocated;
-\sword\ seeks to achieve similar efficiencies at the rack scale.
+Our stance in Chapter~\ref{chap:swordbox} is that both locks and optimistic concurrency have their
+place in a disaggregated systems, and that a middlebox can be used to accelerate both. 
 
 
-
-%where locks are acquired locally prior
-%to issuing a CAS to remote NIC mapped locks. Locks and unlocks each
-%require a CAS operation.
-
-%The biggest
-%boost in Sherman's performance comes from resolving lock conflicts
-%locally. It assumes that most clients are collocated.
-
-
-%%
-%\sg{(danger zone)} We consider client side optimizations to be highly
-%effective, but also highly restrictive as they assume both collocation and a
-%shared address space for their clients. We focus our attention instead on the
-%fundamental limitations of Sherman's lock based approach.
-
-
-%To demonstrate the effectiveness of {\sword} in practice, we
-%needed to select a passive far memory system with which to experiment.
-%The authors of Clover, a recently published key-value store designed
-%for disaggregated persistent memory~\cite{clover}, made their
-%implementation publicly available and helped us deploy it on our
-%testbed. While Clover targets persistent storage it is also a
-%prototypical example of a key-value store for remote DRAM.  Most
-%importantly for our purposes, its design makes the assumption that
-%there are no remote CPU's co-resident with memory. All of
-
-\emph{Optimistic concurrency.}  Two recent systems support concurrent
-updates to remote key-value stores through optimistic use of
-%remote memory accesses are made via
-1-sided RDMA atomic operations and client-driven resolution protocols. 
-%: reads, writes, and CAS.
-In Clover, reads and writes for a given key are made to an append-only
-linked list stored in (persistent) remote memory~\cite{clover};
-clients race to update the tail of the list.  In FUSEE, persistence is
-implemented through client-driven replication, so clients race to
-update a majority of replicas in an instance of distributed
-consensus~\cite{fusee}.  In both cases, writes are guarded by CAS
-operations so clients can independently determine the outcome of the
-race.  Because we are interested in the fundamental costs of
-  contention---as opposed the additional challenge of replication---we focus specifically on Clover in this paper, but \sword\ could equally well apply to a (degenerate) non-replicated instantiation of FUSEE.  Indeed, we provide a performance comparision in the evaluation (Section~\ref{s:results}).
-
-In Clover, all RDMA requests
-are targetted at the (presumed) tail of the list and writes are
-guarded by CAS operations. A client may not know the location of the
-tail as other writers concurrently push it forward. When an operation
-fails to land at the tail of the list Clover traverses the
-structure until the tail is found. While this provides no liveness
-guarantees, in the common read-heavy case concurrent clients
-eventually reach the end of the list. To speed up operations clients
-keep caches of the end of each key's linked list to
-avoid traversals.
-%% When writes are heavy and/or when
-%% particular keys are hot, Clover's performance degrades substantially.
-By implementing a shared cache at the ToR, \sword\ 
-decreases the likelihood of stale accesses.
-%to stale tail locations.
-%Clover serializes writes with RDMA compare and swap
-%requests which further impact performance.
-
-
-
-
-
-\section{Cuckoo Background}
-\label{sec:background}
-
-
-%\subsection{RDMA Key-Value Stores}
-
-%% %Describe existing key value stores relation to RDMA and
-%serialization %
-Key/value stores have long used RDMA to
-%Many non-disaggregated key-value stores have used RDMA to
-accelerate
-performance~\cite{farm,memc3,erpc,herd,faast,mica,pilaf,cell,storm}.
-%%
-These systems strike a careful balance between directly accessing remote memory with one-sided RDMA requests and
-serializing mutating operations at a server-side CPU.
-%%
-Cuckoo~\cite{cuckoo} and hopscotch~\cite{hopscotch} hashing are popular choices in
-this space because clients can calculate the location of
-keys without needing to consult the server and potentially perform
-lock-less reads with RDMA~\cite{farm,pilaf,cuckoo}.
-
-
-
-
-\subsection{Concurrent hash tables} 
-\label{sec:cuckoo-back}
+\subsection{Hash Tables}
+\label{sec:hashtables}
 
 Fully disaggregated key/value stores are essentially concurrent hash
 tables whose conflict resolution strategy is implemented entirely by
@@ -791,17 +762,14 @@ reads can always be executed in a single round trip by reading the
 rows corresponding to both of a key's locations
 simultaneously~\cite{pilaf}.
 
-\textbf{Hopscotch hashing} works in a similar fashion but provides a
-slightly different guarantee, namely that keys will be located within
-a bounded neighborhood.  (While cuckoo hashing limits the number of
-locations in which a key may be stored, it does not provide any
-locality guarantees regarding those locations.) It does so by finding
-the physically closest empty entry to the desired location and then,
-if that location is not within the neighborhood, iteratively
-moving other entries out of the way to make room for the new key.
-The hopscotch process is facilitated by maintaining a per-entry
-bitmask of nearby collisions.  As with cuckoo hashing, clients can read in a single round trip time by reading a key's entire
-neighborhood at once.
+\textbf{Hopscotch hashing} works in a similar fashion but provides a slightly different guarantee,
+namely that keys will be located within a bounded neighborhood.  (While cuckoo hashing limits the
+number of locations in which a key may be stored, it does not provide any locality guarantees
+regarding those locations.) It does so by finding the physically closest empty entry to the desired
+location and then, if that location is not within the neighborhood, iteratively moving other entries
+out of the way to make room for the new key.  The hopscotch process is facilitated by maintaining a
+per-entry bitmask of nearby collisions.  As with cuckoo hashing, clients can read in a single round
+trip time by reading a key's entire neighborhood at once.
 
 The insert operation is expensive for both approaches, and prior
 systems have taken steps to mitigate its cost.  In associative hashes
@@ -822,89 +790,60 @@ inserts being to fail, known as the \emph{maximum fill factor}, is a
 function of the number of hash locations and row associativity in
 cuckoo hashing and desired neighborhood size for hopscotch hashing.
 
-RCuckoo uses cuckoo rather than hopscotch hashing due to locking
+RCuckoo (Chapter~\ref{chap:rcuckoo})uses cuckoo rather than hopscotch hashing due to locking
 concerns.
-%While both alog
-%also limits a key's location to a bounded set of 
-%bounded range of addresses and we considered using it as our core data
-%structure. We believe that although hopscotch hashing can likely be
-%disaggregated efficiently it is less straightforward than cuckoo
-%hashing for the following reasons:
-%%
-First, each step of a cuckoo insert process requires one update---to
-the entry being moved to its secondary location---rather than two.
-When an entry is relocated in a hopscotch table, the collision bitmask
-must also be updated.  (Reno~\cite{reno} uses one-sided atomics to
-sloppily update the bitmask but requires a server-side CPU to fix the
-bitmasks whenever concurrent inserts execute.)  Second, keys exist in
-one of two locations in cuckoo hashing so updates and deletes require
-locking only two rows, while hopscotch entries inhabit a range of
-locations, so a conservative locking strategy must lock the entire
-range.  Yet, RCuckoo takes inspiration from hopscotch neighborhoods and employs dependent hashing to increase the spatial
-locality of key locations, enabling clients to use local
-caches to speculatively compute cuckoo paths.
-
-%Because each lock
-%acquisition is expensive this increases the fundamental difficulty of
-%disaggregation a hopscotch hash.
+%While both alog also limits a key's location to a bounded set of bounded range of addresses and we
+%considered using it as our core data structure. We believe that although hopscotch hashing can
+%likely be disaggregated efficiently it is less straightforward than cuckoo hashing for the
+%following reasons: %
+First, each step of a cuckoo insert process requires one update---to the entry being moved to its
+secondary location---rather than two.  When an entry is relocated in a hopscotch table, the
+collision bitmask must also be updated.  (Reno~\cite{reno} uses one-sided atomics to sloppily update
+the bitmask but requires a server-side CPU to fix the bitmasks whenever concurrent inserts execute.)
+Second, keys exist in one of two locations in cuckoo hashing so updates and deletes require locking
+only two rows, while hopscotch entries inhabit a range of locations, so a conservative locking
+strategy must lock the entire range.  Yet, RCuckoo takes inspiration from hopscotch neighborhoods
+and employs dependent hashing to increase the spatial locality of key locations, enabling clients to
+use local caches to speculatively compute cuckoo paths.
 
 
+\subsection{Locks vs Optimistic Concurrency}
+\label{sec:lock-vs-op}
 
-%%
-
-%Cuckoo hashes use
-%associative rows to improve their maximum fill factors.
-
-%%now I want to explain why cuckoo hashing and disaggregation don't work well together.
-
-%% Lockless $O(1)$ reads make Cuckoo hashing a desireable
-%% candidate for a disaggregated index. However, long
-%% unpredictable cuckoo paths and RDMA CAS limitations make
-%% performing insertions without locks difficult in the
-%% disaggregated setting. We designed an RDMA based cuckoo hash
-%% to illustrate the difficulties of performing opportunistic
-%% insertions. On inserts this system makes a sequence of reads
-%% to calculate a valid cuckoo path and then itteratitivly
-%% issues CAS operations to swap value along the path. If any
-%% value on the path is concurrently modified by another client
-%% the insertions will fail and must restart.
-%% Figure~\ref{fig:cuckoo-problems}(a) shows how the failure
-%% rate of insertions filling a table from 80-90\% full.
+\emph{Locks}  Sherman B+ Tree~\cite{sherman} is augmented using entirely 1-sided RDMA operations. Sherman improves
+performance under contention in two ways. First, it places locks for each node in the B+Tree in a
+special region of NIC memory exposed by ConnectX-5 NICs.  This small chunk of memory exposes the
+same RDMA interface as host memory, but allows locking operations to execute with approximately
+3$\times$ the throughput.  Second, Sherman's clients employ a hierarchical locking scheme to reduce
+the contention for server-hosted locks.  This client-local optimization significantly improves
+performance in cases where clients are collocated; \sword\ seeks to achieve similar efficiencies at
+the rack scale.
 
 
-%% \subsection{Full disaggregation}
+\emph{Optimistic concurrency.}  Clover~\cite{clover}, RACE~\cite{race}, and a successor to RACE
+called FUSEE~\cite{fusee} all use optimistic concurrency.
 
-%% %%
-%% Disaggregated key-value in contrast assume that a memory
-%% server cannot provide serialization and orchestrate their
-%% writes solely using
-%% clients~\cite{rolex,fusee,clover,sherman,ford,race}. With
-%% the exception of Sherman~\cite{sherman} these systems use
-%% systems commit writes optimistically using 64 bit RDMA CAS. 
-%% %%
-%% Opportunistic writes have the advantage that updates are
-%% atomically visible, no critical sections exist, and client
-%% failures do not leave the table in an inconsistent state.
-%% Unfortunately CAS based opportunistic writes perform poorly
-%% under contention leading to high tail latencies
-%% ~\cite{clover}. Additionally RDMA CAS does not scale
-%% well~\cite{design-guidelines}(Figure~\ref{fig:rdma-benchmarks}(b)),
-%% and their small word width and lack of multi-CAS support
-%% constrain the size and types of updates they can perform.
+They each supported remote key-value stores through optimistic use of
+%remote memory accesses are made via
+1-sided RDMA atomic operations and client-driven resolution protocols. 
+%: reads, writes, and CAS.
+In Clover, reads and writes for a given key are made to an append-only linked list stored in
+(persistent) remote memory~\cite{clover}; clients race to update the tail of the list.  In FUSEE,
+persistence is implemented through client-driven replication, so clients race to update a majority
+of replicas in an instance of distributed consensus~\cite{fusee}.  In both cases, writes are guarded
+by CAS operations so clients can independently determine the outcome of the race.  Because we are
+interested in the fundamental costs of contention---as opposed the additional challenge of
+replication---we focus specifically on Clover in this paper, but \sword\ could equally well apply to
+a (degenerate) non-replicated instantiation of FUSEE.  Indeed, we provide a performance comparision
+in the evaluation (Section~\ref{s:results}).
 
-%% CAS width in particular effects system design because
-%% key-value pairs can rarely fit into 64 bits, indexes updated
-%% with CAS must reference keys values indirectly with a
-%% pointer. At minimum resolving a remote pointer requires an
-%% additional round trip for every read~\cite{race,clover}.
-%% %%
-%% As we will show in the following section data structures
-%% like cuckoo and hopscotch hashes are difficult implement with
-%% optimistic CAS updates because they require multiple updates
-%% to execute atomically.
-
-
-
+In Clover, all RDMA requests are targetted at the (presumed) tail of the list and writes are guarded
+by CAS operations. A client may not know the location of the tail as other writers concurrently push
+it forward. When an operation fails to land at the tail of the list Clover traverses the structure
+until the tail is found. While this provides no liveness guarantees, in the common read-heavy case
+concurrent clients eventually reach the end of the list. To speed up operations clients keep caches
+of the end of each key's linked list to avoid traversals.  By implementing a shared cache at the
+ToR, \sword\ decreases the likelihood of stale accesses.
 
 
 
@@ -948,7 +887,7 @@ shared memory system as a benchmark for future systems to compare to.
 
 
 \input{swordbox/intro}
-\input{swordbox/backv2}
+% \input{swordbox/backv2}
 \input{swordbox/tmp_sigcomm}
 \input{swordbox/implementation}
 \input{swordbox/eval}
@@ -975,46 +914,6 @@ middlebox interposition, during this research we also explored data structures a
 were amenable to disaggregation in general.
 
 
-\begin{table}[h]
-	%\begin{table}[h]
-		\centering
-		\caption{Cross section of systems and techniques. Full circles~{\fullcirc} imply that a system uses the category, ~{\halfcirc}  denotes when a
-		system meets the qualification in spirit but not explicitly, and ~{\nullcirc}  
-		when the technique is absent. Columns OC and CC stand for Optimistic Concurrency and Compute Coalescing respectively.}
-		\begin{tabular}{ c | c | c | c | c | c | c | c | c }
-			& project & \shortstack{read \\ inflation} & \shortstack{relaxed  \\ layout} & \shortstack{pre-\\compute} & \shortstack{OC*} & \shortstack{metadata \\ caching} & \shortstack{CC*} & \shortstack{self \\ verifing}  \\ \hline
-																	%N          %R          %P          %O          %M          %C          %W          %S
-	\multirow{3}{*}{\rotatebox[origin=c]{90}{\shortstack{Multicore \\ NUMA}}} & \shortstack{Flat \\ Combining}~\cite{flat-combining}   & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \fullcirc & \nullcirc \\ \cdashline{2-9}
-			 & \shortstack{Hopscotch \\ Hash}~\cite{hopscotch}         & \fullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc \\ \cdashline{2-9}
-	%\multirow{1}{*}{\rotatebox[origin=c]{0}{\shortstack{NUMA}}} & \shortstack{Blackbox \\ NUMA}~\cite{black-box-numa}     &  &  &  &  &  &  &  &  \\ \hline \hline %\cline{2-10} \cline{2-10}
-			& \shortstack{Blackbox \\ NUMA}~\cite{bbn}     & \halfcirc & \nullcirc & \nullcirc & \fullcirc & \fullcirc & \fullcirc & \nullcirc \\ \hline %\cline{2-10} \cline{2-10}
-	\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{RDMA \\ Key-Value}}} & pilaf~\cite{pilaf}                                      & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \fullcirc \\ \cdashline{2-9}
-			 & farm~\cite{farm}                                        & \fullcirc & \nullcirc & \nullcirc & \fullcirc & \fullcirc & \fullcirc  & \nullcirc \\ \cdashline{2-9}
-			 & herd~\cite{herd}                                        & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc  & \nullcirc \\ \cdashline{2-9}
-			 & cell~\cite{cell}                                        & \nullcirc & \nullcirc & \nullcirc & \halfcirc & \fullcirc & \nullcirc  & \fullcirc \\ \hline \hline
-			 % & % fasst~\cite{faast}                                      & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc %& \nullcirc & \nullcirc \\ \hdashline
-			 % & % erpc~\cite{erpc}                                        & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc & \nullcirc \\ \hdashline
-			 %& storm~\cite{storm}                                      &  &  &  &  &  &  &  \\ \cdashline{2-9}
-			 % & 1RMA~\cite{1rma}                                        &  &  &  &  &  &  &  \\ \hline \hline
-	%\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{\small Disaggregated \\ \small Datastructures }}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
-	\multirow{4}{*}{\rotatebox[origin=c]{90}{\shortstack{\small Disaggregated \\ \small Datastructures }}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
-	%\multirow{5}{*}{\rotatebox[origin=c]{90}{\shortstack{Far-Memory \\ Structures}}}        & Clover~\cite{clover}                                    & \nullcirc &  \halfcirc &  \nullcirc & \fullcirc & \fullcirc  & \nullcirc & \nullcirc \\ \cdashline{2-9}
-			 & \shortstack{RACE}~\cite{race}            & \fullcirc  & \fullcirc & \halfcirc & \fullcirc & \fullcirc & \nullcirc & \fullcirc \\ \cdashline{2-9}
-			 & \shortstack{Sherman \\ ~\cite{sherman}}                            & \fullcirc & \fullcirc & \halfcirc & \fullcirc & \fullcirc & \fullcirc & \fullcirc \\ \cdashline{2-9}
-			 %& Ford~\todo{}                                          &  &  &  &  &  & \\ \cdashline{2-9}
-			 & Mind~\cite{mind}                                              & \nullcirc & \halfcirc & \halfcirc & \nullcirc & \fullcirc & \nullcirc & \nullcirc \\ \hline
-		\end{tabular}
-	
-		
-		\label{tab:re-table}
-	\end{table} 
-
-Table~\ref{tab:re-table} is the result of a literature review on the state of the art for shared
-data structures. Our reading lead us to the insight that multi-core NUMA systems and RDMA key-value
-stores shared the most with new breeds of disaggregated data structures. NUMA systems had a focus on
-high latency memory and techniques on how to mitigate their cost, and RDMA key-value stores
-explored both techniques for high performance RDMA and how to reduce the need for serialization down
-to a few fast operations~\cite{cuckoo-improvements}.
 
 \todo{move to the background chapter}
 A number of threads stood out to us during our review. Perhaps the most important is that data
